[package]
name = "mm"
version = "0.2.0"
authors = ["Jake W. Ireland <jakewilliami@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["cargo", "wrap_help", "derive"] }
cocoa = "0.25.0"
objc = "0.2.7"
objc-foundation = "0.1.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
